--- a/payment.html
+++ b/payment.html
@@ -6,8 +6,7 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body> 
-    Это еще одна моя пробная страница
-    Demo 
+    Это еще одна моя пробная страница_1
 </body>
 </style>
     </html>
